# todo_list_flask_brython

./: .gitattributes  .gitignore  Procfile  README.md  behave.ini  config.py  docker-compose-database.yml  docker-compose.yml  dockerfile-app  flask.conf  pyproject.toml  requirements.txt  rodando_projeto.md  setup.py  start.sh  supervisord.conf  tox.ini
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  api.py  front.py  home.py  model.py  serializer.py  tests.py
app/static/css/: grid.css  style.css  terminal.min.css
app/static/js/: brython_modules.js
app/static/scripts/: login.py  register.py  todo.py
app/templates/: comp_create.html  comp_doing.html  comp_done.html  comp_todo.html  footer.html  header.html  imports.html  login.html  register.html  todo.html
features/: account_create.feature  create_user.feature  criacao_de_tarefas.feature  environment.py  login.feature  movimentacao_de_tarefas.feature  movimentao_tarefas.feature  task_api.feature  todo.feature
features/helpers/: api.py
features/modules/: todo.py
features/page_objects/: pages.py
features/steps/: api.py  create_user.py  login.py  steps.py  todo.py
migrations/: env.py
migrations/versions/: 206f66803696_.py  5e24c739668d_.py  82b0f7c525e6_migração_inicial.py  b383438641b9_.py  b943851acf09_.py
tests/: conftest.py  test_api.py  test_app.py  test_front.py  test_register.py  test_ui.py
