[tool.poetry]
name = "todo_list_flask_brython"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
flask = "^1.1.2"
sqlalchemy = "^1.3.18"
flask-marshmallow = "^0.13.0"
marshmallow-sqlalchemy = "^0.23.1"
flask-migrate = "^2.5.3"
brython = "^3.8.9"
flask-login = "^0.5.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-sugar = "^0.9.4"
pytest-html = "^2.1.1"
ipdb = "^0.13.3"
pytest-mock = "^3.2.0"
selenium = "^3.141.0"
factory_boy = "^2.12.0"
jsonschema = "^3.2.0"
behave = "^1.2.6"
page_objects = "^1.1.0"
httpx = "^0.14.1"
black = "^19.10b0"
xenon = "^0.7.0"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
blinker = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
